<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:padding="15dp"
              android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:padding="0dp"
                  android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <TextView
                android:text="@string/user_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="18sp"
                android:layout_marginTop="20dp" android:textColor="@android:color/holo_red_dark"/>
        <TextView
                android:text="@string/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/user_ans" android:layout_marginTop="20dp"
                android:textSize="18sp" android:textAlignment="center" android:layout_marginStart="15dp"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:padding="0dp"
                  android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <TextView
                android:text="@string/correct_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:textSize="18sp"
                android:layout_marginTop="40dp" android:textColor="@android:color/holo_green_dark"/>
        <TextView
                android:text="@string/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/correct_ans" android:layout_marginTop="40dp"
                android:textSize="18sp" android:textAlignment="center" android:layout_marginStart="15dp"/>
    </LinearLayout>
    <TextView
            android:text="@string/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/score" android:layout_marginTop="40dp"
            android:textSize="18sp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:padding="0dp"
                  android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <Button
                android:text="@string/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next"
                android:layout_marginTop="40dp"
                android:layout_marginStart="40dp"
                style="@android:style/Widget.Material.Button.Borderless"
                android:background="@android:color/holo_green_dark"/>
        <Button
                android:text="@string/btn_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/finish"
                android:layout_marginTop="40dp"
                android:layout_marginStart="100dp" style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@android:color/holo_red_dark"/>
    </LinearLayout>
</LinearLayout>